# crypto_proyecto

./: .gitignore  README.md  crypto.ipynb  pyproject.toml
data/: cluster_resumen_monedas.csv  crypto_limpio.csv  metricas_arima.csv  metricas_lstm.csv
scripts/: api.py
web/: app.js  index.html  styles.css
