[project]
name = "proyecto-crypto"
version = "0.1.0"
description = "Analisis de criptomonedas y modelos de prediccion"
authors = [
    { name = "Juan David Fandiño", email = "juan.fandino1@estudiantesunibague.edu.co" }
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
